Add exercise two-bucket

--- a/config.json
+++ b/config.json
@@ -824,6 +824,14 @@
       ]
     },
     {
+      "slug": "two-bucket",
+      "difficulty": 5,
+      "topics": [
+        "strings",
+        "pattern matching"
+      ]
+    },
+    {
       "uuid": "e7351e8e-d3ff-4621-b818-cd55cf05bffd",
       "slug": "accumulate",
       "deprecated": true
